Design changes: 1) Fix right info component's borders 2) Open configuration tooltips to the bottom 3) Always display health log component 4) Display main bullets in health log in gray 5) Align indicators to the left again

--- a/Live-dashboard/src/app/stream-info/stream-configurations/stream-configurations.component.scss
+++ b/Live-dashboard/src/app/stream-info/stream-configurations/stream-configurations.component.scss
@@ -9,6 +9,9 @@
   margin-bottom: 22px;
 
   .property {
+    display: flex;
+    flex-flow: column nowrap;
+    text-align: left;
 
     .configuration-label {
       font-size: 13px;
@@ -31,10 +34,11 @@
 
     .configuration-status {
       margin-top: 14px;
+      margin-left: -1px;
 
       .bullet {
         font-size: 60px;
-        margin-left: -6px;
+        margin-left: -4px;
       }
 
       .state {
