--- a/Live-dashboard/src/app/stream-info/stream-health-notifications/stream-health-notifications.component.scss
+++ b/Live-dashboard/src/app/stream-info/stream-health-notifications/stream-health-notifications.component.scss
@@ -76,6 +76,7 @@
   font-size: 47px;
   line-height: 23px;
   padding-left: 2px;
+  color: $kGrayscale2;
 }
 
 .small-bullet {
